# Requirements Update (requirements will need to be reinstalled)
Updated arrapi requirement to 1.4.2
Updated pillow requirement to 9.4.0

# New Features
Added new collection_order `custom.desc` ([FR](https://features.metamanager.wiki/features/p/reverse-sort-collectionorder-custom))
Added webp Image Support ([FR](https://features.metamanager.wiki/features/p/support-webp-image-extensions))
Added Spanish Defaults Translation
Added Delete Webhooks

# Bug Fixes
Fixed Italian Defaults Translation
Fixed TMDb Modified Filters
Fixed ValueError from Anime IDs